--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<img src="https://szagrande.github.io/Den/1730328648414_055501.jpg" alt="a green hummingbird flying among yellow flowers" title="Photo by Geronimo Giqueaux for Unsplash" class="editorial-image">
+<img src="https://szagrande.github.io/skjs/Screenshot_20241207-082315.png" alt="a green hummingbird flying among yellow flowers" title="Photo by Geronimo Giqueaux for Unsplash" class="editorial-image">
 <!-- partial -->
   
 </body>
